<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_layout">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/topLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:background="@drawable/card_view_border"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_layout"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivArticleImage"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvArticleSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view"
                android:text="@string/article_source"
                android:textAppearance="@style/TextAppearance.Body.Fresh" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_top_bottom_left_right"
            android:layout_marginTop="@dimen/margin_top_bottom_left_right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvArticleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:text="@string/article_title"
                android:textAppearance="@style/TextAppearance.Body.Medium"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvArticleDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_view"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/article_description"
                android:textAppearance="@style/TextAppearance.Body.Fresh" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_view"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:text="@string/article_author_colon"
                    android:textAppearance="@style/TextAppearance.Body.Medium" />

                <TextView
                    android:id="@+id/tvArticleAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_author"
                    android:textAppearance="@style/TextAppearance.Body.Fresh" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>




